# unformatter

./: CMakeLists.txt  flake.nix  readme.md
.github/workflows/: cmake-multi-platform.yml
cmake/: Config.cmake.in
nix/: build.nix  shell.nix
sample/: CMakeLists.txt  main.cpp
unformatter/: CMakeLists.txt
unformatter/include/unformatter/: bit.hpp  bit_unformatter.hpp  size.hpp  unformatter.hpp  util.hpp
unformatter/include/unformatter/inner/: bitutil.hpp  common.hpp  util.hpp
unformatter/test/: CMakeLists.txt  test_bit_unformatter.cpp  test_bitutil.cpp  test_inner_util.cpp  test_unformatter.cpp  test_util.cpp
